--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,84 @@
 
 [class*="col-"] {
   height: 100%;
-  border: solid 1px #000;
+  /* border: 1px solid black; */
 }
 
-.header-all {
-  height: 450px;
-  background-color: #1abc9c;
-}
+/* sezione header */
 
-.header-navbar {
+
+header > .container-fluid > .row {
   height: 50px;
   background-color: #2c3e50;
+}
+
+header .navbar-default {
+  background-color: transparent;
+  border: none;
+}
+
+header .navbar-default .navbar-brand {
+  padding-left: 50px;
+  color: white;
+}
+
+header .navbar-default .navbar-brand:hover, header .navbar-default .navbar-nav>li>a:hover {
+  color: lightgrey;
+}
+
+header .navbar-nav {
+  padding-right: 50px;
+}
+
+header .navbar-default .navbar-nav>li>a {
+  color: white;
+}
+
+header .navbar-default .navbar-toggle {
+  border-color: white;
+}
+
+header .navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+/* sezione jumbo */
+
+#jumbo .row {
+  height: 450px;
+  background-color: #1abc9c;
+  color: white;
+}
+
+#jumbo img {
+  width: 200px;
+  padding-top: 20px;
+}
+
+#jumbo .divider-star {
+  height: 0;
+  margin: 40px 0;
+}
+
+#jumbo .divider-star .col-xs-2.line {
+  border-bottom: 3px solid white;
+}
+
+.divider-star .col-xs-2 i {
+  font-size: 20px;
+  position: relative;
+  bottom: 10px;
+}
+
+/* sezione portfolio */
+
+#portfolio .divider-star {
+  height: 0;
+  margin: 40px 0;
+}
+
+#portfolio .divider-star .col-xs-2.line {
+  border-bottom: 3px solid #2c3e50;
 }
 
 .portfolio-h {
@@ -35,34 +102,12 @@
   border: none;
 }
 
-.padding-img > [class*="img-"] {
-  height: 100%;
+.portfolio-img img {
+  height: 95%;
   border-radius: 10px;
 }
 
-.img-house {
-  background-color: #ba4b63;
-}
-
-.img-cake {
-  background-color: #1ea4b6;
-}
-
-.img-circus {
-  background-color: #140f0f;
-}
-
-.img-controller {
-  background-color: #1c83c1;
-}
-
-.img-safe {
-  background-color: #0e3885;
-}
-
-.img-submarine {
-  background-color: #ccb3a3;
-}
+/* sezione about */
 
 .about-all {
   height: 400px;
@@ -88,9 +133,6 @@
 }
 
 
-header {
-  margin-bottom: 40px;
-}
 
 section {
   /* padding: 0 10%; */
